--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Data Catalog Demo</title>
-    <script>window.location.href="http://evidently-ui.default.tanzudatatap.com"</script>
+    <script>window.location.href="http://evidently-dashboard.tanzudatatap.com"</script>
 </head>
 <body>
 <img style="display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://paketo.io/images/paketo-logo-full-color.png"></img>
